wordpress/wp-content/themes/thulme/assets/less/config.less
//
// Color Swatches
// --------------------------------------------------

// Tom's color scheme
// https://kuler.adobe.com/thulme-com-color-theme-2664357/
@stockholm:       #fcfffc;
@deep-sea:        #32373C;
@investing:       #40E2E1;
@thulme:          #102753;
@startup-tools:   #90CC3A;
@open-design:     #EBC434;
@weiji:           #D13351;


//
// Responsive
// --------------------------------------------------
@tabletBreakpoint:      979px;
@mobileBreakpoint:      520px;

